# four-winds-reborn

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: ArcaniumArchive.md  BalanceLab.md  BalanceTiers.md  BattleAndAdventureRules.md  Localization.md  MatchScoring.md  README.md  ReleaseProcess.md  RulesDecisions.md  SpellLifecycle.md
docs/reference/classic/: README.md
mods/reborn-temple-cantor/: README.md  apply.ps1  intro-timings-ru.json  mod.json
mods/reborn-temple-cantor/source/: reference.json
scripts/: apply-russian-translations.py  build-linux.sh  build-macos.sh  build-windows-msys2.sh  build-windows.ps1  build.sh  chatterbox-preview.py  compare-balance-cohorts.ps1  compare-balance-pairs.ps1  prepare-reborn-adventure-map.py  prepare-reborn-avatar-art.ps1  prepare-reborn-combat-animations.py  prepare-reborn-combat-screen.py  prepare-reborn-creature-art.ps1  prepare-reborn-intro-art.py  prepare-reborn-menu-art.py  prepare-reborn-remaining-ui.py  prepare-reborn-status-art.py  prepare-reborn-summary-art.ps1  prepare-reborn-summoning-circle-art.py  prepare-reborn-town-art.py  prepare-reborn-victory-art.ps1  reborn_atlas.py  reborn_buttons.py  reborn_clan_flags.py  reborn_clans.py  reborn_music.py  reborn_runes.py  reborn_turn_timer.py  reborn_winds.py  run-balance-cohorts.ps1  run-balance-lab.ps1  run-balance-matrix.ps1  run-refactor-gate.ps1  setup-voice-tools.ps1  validate-json.py  verify-balance-replays.ps1  voicepack.py
src/: actions.h  adventurepart.cpp  adventurepart.h  aiadventure.cpp  aiadventure.h  aibattle.cpp  aiprofile.cpp  aiprofile.h  aispell.cpp  aispell.h  aistrategy.cpp  aistrategy.h  aiturn.cpp  aiturn.h  battle.cpp  battle.h  battlecommands.cpp  battlecommands.h  battlesession.cpp  battlesession.h  crashreport.cpp  crashreport.h  creaturestate.cpp  developertools.cpp  developertools.h  dialogs.cpp  dialogs.h  encyclopedia.cpp  encyclopedia.h  gamedata.cpp  gamedata.h  gameobjects.cpp  gameobjects.h  gameplayrng.cpp  gameplayrng.h  gamestateio.cpp  gamesummarypart.cpp  gamesummarypart.h  gametheme.cpp  gametheme.h  (+37 more)
src/ai/: aiadventure.cpp  aiadventure.h  aibattle.h  aiprofile.cpp  aispell.cpp  aistrategy.cpp  aiturn.cpp  aiturn.h  simulation.cpp  simulation.h  tournament.cpp
src/battle/: battle.cpp  battlecommands.h  battleentities.cpp  battlestate.cpp
src/platform/: contentcatalog.cpp  contentcatalog.h  filedialog.cpp  filedialog.h  recovery.cpp  recovery.h  replayfiles.cpp  replayfiles.h  savegames.h  settings.cpp  settings.h
src/rules/: actions.h  actionvalidation.cpp  actionvalidation.h  adventurecommands.cpp  adventurecommands.h  contentpackage.cpp  contentpackage.h  developerfixtures.cpp  gameplayrng.cpp  gamestateio.cpp  matchscore.h  playerstate.cpp  replay.cpp  replay.h  runegamecommands.cpp  runegameruleset.cpp  runegameruleset.h  runegamestate.cpp
src/ui/: adventurehints.cpp  adventurehints.h  adventureinput.cpp  adventurepart.cpp  adventurepart.h  adventureuievents.h  battlechoicedialog.cpp  battlechoicedialog.h  battlesummarypart.cpp  battlesummarypart.h  battleuitext.cpp  battleuitext.h  developertools.cpp  developertools.h  dialogs.cpp  dialogs.h  encyclopedia.h  gamesummarypart.cpp  gamesummarypart.h  gametheme.cpp  gametheme.h  intropart.cpp  jsongui.cpp  jsongui.h  loadrecovery.cpp  loadrecovery.h  mahjongpart.cpp  mahjongpart.h  mahjongsummarypart.cpp  mainmenu.cpp  mainmenu.h  replaybrowser.cpp  replaybrowser.h  replayviewer.cpp  replayviewer.h  runegameinput.cpp  runegamepresentation.cpp  runegametargetdialogs.cpp  runegametargetdialogs.h  runegamewidgets.h  (+6 more)
tests/: avatar_balance_tests.cpp  avatar_balance_tests.h  gameplay_regression_tests.cpp
tests/fixtures/: balance-cohorts-15.6e-refactor.sha256.json
themes/classic/: content.json  index.json
themes/classic/assets/: License.txt  README.md
themes/classic/json/: dialog_developer_tools.json  dialog_replaypath.json  dialog_savegame.json  encyclopedia.json  screen_adventurepart.json  screen_battle_summary.json  screen_encyclopedia.json  screen_loadrecovery.json  screen_mahjong_summary.json  screen_mainmenu.json  screen_replaybrowser.json  screen_settings.json  screen_showplayers.json
themes/classic/json/gamedata/: avatars.json  fonts.json  musics.json  sounds.json
themes/classic/lang/: ru.mo  ru.po  runewars-na.pot
themes/default/: bonus.json  config.json  index.json
themes/default/json/: README  dialog_combat.json  dialog_developer_tools.json  dialog_luckdraw.json  encyclopedia.json  screen_adventurepart.json  screen_battle_summary.json  screen_game_summary.json  screen_intro.json  screen_mahjongpart.json  screen_mainmenu.json  screen_replaybrowser.json  screen_selectperson.json  screen_settings.json
themes/default/json/gamedata/: abilities.json  avatars.json  clans.json  creatures.json  fonts.json  images.json  lands.json  spells.json
themes/default/lang/: ru.mo  ru.po  runewars-na.pot
themes/reborn/: config.json  index.json  provenance.json
themes/reborn/assets/: README.md
themes/reborn/json/: README  dialog_ingamemenu.json  dialog_messagebox.json  screen_adventurepart.json  screen_encyclopedia.json  screen_intro.json  screen_loadrecovery.json  screen_mahjongpart.json  screen_mainmenu.json  screen_replaybrowser.json  screen_replayviewer.json  screen_selectperson.json  screen_settings.json
themes/reborn/json/gamedata/: abilities.json  avatars.json  clans.json  creatures.json  fonts.json  images.json  lands.json  musics.json  sounds.json  spells.json
themes/reborn/lang/: ru.mo  ru.po  runewars-na.pot
themes/reborn/licenses/: Forum-OFL.txt
themes/reborn/original/: License.txt
